# gvsoc

./: .gitignore  CMakeLists.txt  Makefile  README.md  vp_models.mk
docs/: conf.py  index.rst  requirements.txt
docs/devices/: index.rst
dpi-wrapper/src/: dpi.cpp
engine/: CMakeLists.txt  Makefile
engine/include/gv/: gvsoc.h  gvsoc.hpp  power.hpp
engine/include/vp/: component.hpp  config.hpp  implementation.hpp  ports.hpp  queue.hpp  signal.hpp  vp.hpp  vp_data.hpp
engine/include/vp/clock/: clock_engine.hpp  clock_event.hpp  component_clock.hpp  implementation.hpp
engine/include/vp/comp-model/: cm.hpp  component.hpp  config.hpp  implementation.hpp  ports.hpp
engine/include/vp/itf/: clk.hpp  hyper.hpp  i2c.hpp  io.hpp  jtag.hpp  qspim.hpp  uart.hpp  wire.hpp
engine/include/vp/itf/implem/: clock.hpp  wire.hpp  wire_class.hpp
engine/include/vp/power/: component_power.hpp  implementation.hpp  power.hpp  power_engine.hpp  power_source.hpp  power_table.hpp  power_trace.hpp
engine/include/vp/time/: time_engine.hpp  time_scheduler.hpp
engine/include/vp/trace/: component_trace.hpp  event_dumper.hpp  implementation.hpp  trace.hpp  trace_engine.hpp  vcd_dumper.hpp
engine/python/: vp_core.py  vp_runner.py
engine/python/gv/: gtkwave.py  gvsoc.py  gvsoc_control.py
engine/python/gv/chips/: gap8.py  gap9_v2.py  pulp.py
engine/src/: comp-model.cpp  jsmn.c  launcher.cpp  main.cpp  queue.cpp  vp.cpp
engine/src/clock/: clock.cpp
engine/src/power/: component_power.cpp  power.cpp  power_engine.cpp  power_source.cpp  power_trace.cpp
engine/src/trace/: event.cpp  fst.cpp  lxt2.cpp  trace.cpp  vcd.cpp
engine/src/trace/fst/: fstapi.c
engine/vp/: Makefile  clock_domain.py  clock_domain_impl.cpp  power_engine_impl.cpp  time_domain_impl.cpp  time_engine.cpp  trace_domain_impl.cpp  trace_engine.py
examples/launcher/: launcher.cpp
launcher/: CMakeLists.txt  Makefile
launcher/src/: launcher.cpp
models/: CMakeLists.txt  Makefile  isa_riscv_decode.cpp  isa_riscv_decode.hpp
models/board/: switch_impl.cpp
models/cache/: cache_impl.cpp
models/devices/: CMakeLists.txt
models/devices/sound/: CMakeLists.txt  i2s_clock.cpp  i2s_microphone.cpp  i2s_speaker.cpp
models/devices/testbench/: CMakeLists.txt  Makefile  i2s_verif.cpp  i2s_verif.hpp  spim_verif.cpp  spim_verif.hpp  testbench.cpp  testbench.hpp
models/gdbserver/: gdbserver.cpp
models/interco/: Makefile  converter_impl.cpp  interleaver.py  interleaver_impl.cpp  router_impl.cpp
models/memory/: .gitignore  Makefile  README-DRAMSys.md  README-DRAMSys.txt  README-SystemC-TLM-2.0.md  README-gem5.md  ddr_impl.cpp  ddr_sc_impl.cpp  ems_addr_adapter.h  ems_at_bus.h  ems_at_target.h  ems_gem5_tlm_br.h  ems_gvsoc_tlm_br.h  ems_mm.h  ems_target.h  gem5.tnt.sh  get_systemc.sh  memory_atomic_impl.cpp  memory_impl.cpp
(+213 files in other folders)
